<resources>
    <string name="app_name">Catflix</string>
    <string name="BaseUrl">http://10.0.2.2:3001/</string>
    <string name="unlimited_films">Unlimited Films</string>
    <string name="ready_to_watch_create_an_account_and_start_watching_movies">Ready to watch? create an account and start watching movies!</string>
    <string name="get_started">Get started</string>
    <string name="catflix">Catflix</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_image">Upload image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="noMoviesText">OOPS, no movies where found, try searching for other movies. we have plenty.</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    
</resources>