<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".activities.RegistrationPage">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/catflixLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catflix"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton"
        android:layout_marginStart="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/catflixLogo"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="24dp" />


            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_border"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/uploadImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:backgroundTint="@color/red"
                android:layout_gravity="center"
                android:padding="12dp"
                android:elevation="4dp"
                 />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/username"
                android:background="@color/netflix_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:background="@color/netflix_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@color/netflix_gray"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/netflix_gray"
                android:textColorHint="@color/white"
                android:hint="@string/phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:backgroundTint="@color/red"
                android:padding="12dp"
                android:elevation="4dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/signInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
